--- a/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using E_Commerce
 @using E_Commerce.Entities
 @using E_Commerce.Models;
+@using E_Commerce.Areas;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 
