--- a/Views/Shared/Components/ProductList/Default.cshtml
+++ b/Views/Shared/Components/ProductList/Default.cshtml
@@ -1,17 +1,19 @@
 ﻿@model List<Product>
-<div class="row">
-    @foreach (var item in Model)
-    {
-        <div class="col-md-3">
-            <div class="card mr-1 mb-1">
-                <img src="..." class="card-img-top" alt="Resim bulunamadı.">
-                <div class="card-body">
-                    <h5 class="card-title">@item.Name</h5>
-                    <p class="card-text">@item.Price</p>
+    <div class="container-fluid content-row">
+        <div class="row">
+            @foreach (var item in Model)
+            {
+                <div class="col-md-3">
+                    <div class="card mr-1 mb-1 h-100">
+                        <img src="/img/@item.Picture" class="card-img-top p-4 mb-auto" alt="">
+                        <div class="card-body d-flex flex-column mt-auto"  >
+                            <h5 class="card-title mt-auto">@item.Name</h5>
+                            <p class="card-text mt-auto">@item.Price</p>
 
-                    <a asp-action="ProductDetail" asp-controller="Home" asp-route-id="@item.Id" class="btn-primary float-right" >Detay Göster</a>
+                            <a asp-action="ProductDetail" asp-controller="Home" asp-route-id="@item.Id" class="btn-primary float-right">Detay Göster</a>
+                        </div>
+                    </div>
                 </div>
-            </div>
+            }
         </div>
-    }
-</div>
+        </div>
